Update NETHERMIND_VERSION format in default.env

--- a/default.env
+++ b/default.env
@@ -12,7 +12,7 @@ COMPOSE_FILE={{COMPOSE_FILE}}
 #============================================================================
 GETH_VERSION=v1.16.2
 RETH_VERSION=v1.6.0
-NETHERMIND_VERSION=v1.32.4
+NETHERMIND_VERSION=1.32.4
 BESU_VERSION=25.7.0
 ERIGON_VERSION=v3.0.15
 
