--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -1,4 +1,4 @@
-name: Auto Version and Update Files
+name: Update Version
 
 on:
   push:
@@ -7,33 +7,32 @@ on:
 jobs:
   version:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
     - uses: actions/checkout@v3
-      with:
-        fetch-depth: 0
-        persist-credentials: false
     
-    - name: Bump version and create tag
-      id: tag_version
-      uses: anothrNick/github-tag-action@1.67.0
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        DEFAULT_BUMP: patch
-        WITH_V: true
-        INITIAL_VERSION: 0.1.0
+    - name: Get current version
+      id: get_version
+      run: |
+        VERSION=$(grep -oP 'v\d+\.\d+\.\d+' nodeboi.sh | head -1)
+        echo "current=$VERSION" >> $GITHUB_OUTPUT
     
-    - name: Update version in files
+    - name: Bump version
+      id: bump
       run: |
-        VERSION="${{ steps.tag_version.outputs.new_tag }}"
-        # Update nodeboi.sh header
-        sed -i "s/v[0-9]\+\.[0-9]\+\.[0-9]\+/$VERSION/g" nodeboi.sh
-        # Update install.sh
-        sed -i "s/SCRIPT_VERSION=\".*\"/SCRIPT_VERSION=\"$VERSION\"/g" install.sh
-        
-    - name: Commit version updates
+        VERSION="${{ steps.get_version.outputs.current }}"
+        VERSION=${VERSION#v}
+        IFS='.' read -r major minor patch <<< "$VERSION"
+        patch=$((patch + 1))
+        NEW_VERSION="v${major}.${minor}.${patch}"
+        echo "new=$NEW_VERSION" >> $GITHUB_OUTPUT
+    
+    - name: Update files
       run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
-        git add nodeboi.sh install.sh
-        git diff --staged --quiet || git commit -m "Update version to ${{ steps.tag_version.outputs.new_tag }}"
-        git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:main
+        sed -i "s/v[0-9]\+\.[0-9]\+\.[0-9]\+/${{ steps.bump.outputs.new }}/g" nodeboi.sh install.sh
+        git config user.name "GitHub Action"
+        git config user.email "action@github.com"
+        git add -A
+        git commit -m "Bump version to ${{ steps.bump.outputs.new }}"
+        git push
